k8s/apps/observability/jaeger/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
spec:
  hosts:
    - 'jaeger.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.observability.svc.cluster.local
          weight: 100
